--- a/AngularSrc/src/index.html
+++ b/AngularSrc/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>AngularSrc</title>
   <base href="/">
-
+  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
